--- a/EmpManagement/appsettings.json
+++ b/EmpManagement/appsettings.json
@@ -6,8 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "MyKey": "Value of MyKey from appsettings.json",
-  "ConnectionStrings": {
-    "EmployeeDBConnection": "server=DESKTOP-RMO61R8;database=EmployeeDB;Trusted_Connection=true"
-  }
+  "MyKey": "Value of MyKey from appsettings.json"
 }
