--- a/EmpManagement/appsettings.Development.json
+++ b/EmpManagement/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft": "Information"
     }
   },
+  "ConnectionStrings": {
+    "EmployeeDBConnection": "server=DESKTOP-RMO61R8;database=EmployeeDB;Trusted_Connection=true"
+  },
   "MyKey": "Value of MyKey from appsettings.development.json"
 }
