--- a/EmpManagement/appsettings.json
+++ b/EmpManagement/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "EmployeeDBConnection": "server=DESKTOP-RMO61R8;database=EmployeeDB;Trusted_Connection=true"
+  },
   "AllowedHosts": "*",
   "MyKey": "Value of MyKey from appsettings.json"
 }
