--- a/EmpManagement/EmpManagement.csproj
+++ b/EmpManagement/EmpManagement.csproj
@@ -1,10 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
+  <!--<PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <UserSecretsId>3a43c400-c2f7-43b2-94ac-8b26e1052b6d</UserSecretsId>
-  </PropertyGroup>
+  </PropertyGroup>-->
+    
+     <PropertyGroup>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+    <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+ </PropertyGroup>
 
   <ItemGroup>
     <Content Remove="wwwroot\js\CustomScript.js" />
